--- a/kubernetes/gateway-service.yml
+++ b/kubernetes/gateway-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db-pagamento-service
+  name: gateway-service
 spec:
   ports:
-    - port: 3308
-      targetPort: 3308
+    - port: 8000
+      targetPort: 8000
       protocol: TCP
   type: ClusterIP
   selector:
-    app: db-pagamento
+    app: gateway
