instalação de dependencias em dockerfiles dos serviços

--- a/app/gestao_veiculos/Dockerfile
+++ b/app/gestao_veiculos/Dockerfile
@@ -3,7 +3,8 @@ FROM php:8.2-apache
 WORKDIR /var/www/html
 
 RUN apt-get update && apt-get install -y \
-    git unzip && pecl install redis \
+    git unzip libgmp-dev libgnutls28-dev libssl-dev
+    && pecl install redis \
     && docker-php-ext-enable gnupg redis
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
