--- a/app/vagas/Dockerfile
+++ b/app/vagas/Dockerfile
@@ -3,7 +3,8 @@ FROM php:8.2-apache
 WORKDIR /var/www/html
 
 RUN apt-get update && apt-get install -y \
-    git gnupg2 unzip && pecl install gnupg redis \
+    git gnupg2 unzip libgmp-dev libgnutls28-dev libssl-dev 
+    && pecl install gnupg redis \
     && docker-php-ext-enable gnupg redis
 
 COPY . /var/www/html/
