Alterações Jenkinsfile e arquivos do docker e kubernetes

--- a/app/vagas/Dockerfile
+++ b/app/vagas/Dockerfile
@@ -3,8 +3,9 @@ FROM php:8.2-apache
 WORKDIR /var/www/html
 
 RUN apt-get update && apt-get install -y \
-    git gnupg2 unzip libgmp-dev libgnutls28-dev libssl-dev 
-    && pecl install gnupg redis \
+    gnupg2 git unzip libgpgme-dev libgpg-error-dev libassuan-dev \
+    libgcrypt20-dev libxml2-dev libssl-dev \
+    && pecl install redis gnupg \
     && docker-php-ext-enable gnupg redis
 
 COPY . /var/www/html/
