--- a/app/gestao_veiculos/Dockerfile
+++ b/app/gestao_veiculos/Dockerfile
@@ -3,8 +3,9 @@ FROM php:8.2-apache
 WORKDIR /var/www/html
 
 RUN apt-get update && apt-get install -y \
-    git unzip libgmp-dev libgnutls28-dev libssl-dev
-    && pecl install redis \
+    gnupg2 git unzip libgpgme-dev libgpg-error-dev libassuan-dev \
+    libgcrypt20-dev libxml2-dev libssl-dev \
+    && pecl install redis gnupg \
     && docker-php-ext-enable gnupg redis
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
