--- a/kubernetes/gateway-deployment.yml
+++ b/kubernetes/gateway-deployment.yml
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: imagem-gateway:latest
+          image: imagem-gateway
+          imagePullPolicy: Never
           ports:
             - containerPort: 8000
