--- a/kubernetes/redis-deployment.yml
+++ b/kubernetes/redis-deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: redis
-          image: localhost/redis:latest
+          image: redis:latest
           ports:
             - containerPort: 6379
