mudanças arquivos deployments

--- a/kubernetes/front-deployment.yml
+++ b/kubernetes/front-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: front
-          image: imagem-front
+          image: localhost/imagem-front
           imagePullPolicy: Never
           ports:
             - containerPort: 80
