--- a/kubernetes/gateway-deployment.yml
+++ b/kubernetes/gateway-deployment.yml
@@ -17,6 +17,6 @@ spec:
       containers:
         - name: gateway
           image: localhost/imagem-gateway
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
