--- a/kubernetes/sensor-deployment.yml
+++ b/kubernetes/sensor-deployment.yml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: sensor
           image: localhost/imagem-sensor
-          imagePullPolicy: Never
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000  
           env:
