--- a/objetosProjeto/mvc/docker-compose.yml
+++ b/objetosProjeto/mvc/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     container_name: mariadb
     environment:
       MARIADB_ROOT_PASSWORD: root
+    volumes:
+      - mariadb_data:/var/lib/mysql
     networks:
       custom_net:
         ipv4_address: 172.25.0.11
@@ -40,6 +42,7 @@ services:
       - custom_net
 
 volumes:
+  mariadb_data:
   ollama_data:
 
 networks:
