--- a/objetosProjeto/mvc/Dockerfile.sensor
+++ b/objetosProjeto/mvc/Dockerfile.sensor
@@ -7,12 +7,9 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 COPY requirements.txt .
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
 COPY . .
-
-RUN python -m venv venv
-RUN . venv/bin/activate 
-RUN pip install -r requirements.txt
-
 
 EXPOSE 5000
 
